--- a/templates/dict/base.html
+++ b/templates/dict/base.html
@@ -1,2 +1,3 @@
 {% extends "base.html" %}
 {% block custom_css %} <link rel="stylesheet" href="//cdn.simplecss.org/simple.min.css"> {% endblock custom_css %}
+{% block title %}Meaning of {{data.word|capfirst}} in Dictionary{% endblock title %}
